[gd_scene load_steps=20 format=4 uid="uid://duwcplpbsvptd"]

[ext_resource type="Texture2D" uid="uid://b6iop5slpec60" path="res://assets/stairs.png" id="1_c0gwk"]
[ext_resource type="TileSet" uid="uid://ie34udps1u6l" path="res://default_tilemap.tres" id="2_iklmn"]
[ext_resource type="PackedScene" uid="uid://34pad26l6jjg" path="res://main_character.tscn" id="3_u3w58"]
[ext_resource type="Script" path="res://main_character.gd" id="4_qldnf"]
[ext_resource type="PackedScene" uid="uid://dpncatk8uc2lm" path="res://target_label.tscn" id="5_v483c"]
[ext_resource type="Script" path="res://door_out.gd" id="6_w4bxk"]
[ext_resource type="PackedScene" uid="uid://c2ybe6d4qygog" path="res://torch.tscn" id="7_ryqje"]
[ext_resource type="PackedScene" uid="uid://cs0ray4vdqr4p" path="res://door_animated.tscn" id="8_8k0dg"]
[ext_resource type="Script" path="res://door_animated.gd" id="9_gtqmv"]
[ext_resource type="PackedScene" uid="uid://bdkhaycm7ewhp" path="res://chixir.tscn" id="10_tqjns"]
[ext_resource type="Script" path="res://chixir.gd" id="11_5pykn"]
[ext_resource type="PackedScene" uid="uid://cpnvmol6m5rf4" path="res://dialogue.tscn" id="12_2o755"]
[ext_resource type="PackedScene" uid="uid://c8jotxjkh73cg" path="res://key.tscn" id="13_ysvy0"]
[ext_resource type="Script" path="res://key.gd" id="14_l5u2x"]
[ext_resource type="Script" path="res://stairs_collision.gd" id="15_aboo6"]

[sub_resource type="Gradient" id="Gradient_qe33k"]
offsets = PackedFloat32Array(0, 0.435374, 1)
colors = PackedColorArray(0.182112, 0.244189, 0.42995, 1, 0.127595, 0.143408, 0.184965, 1, 0.0768358, 0.0768358, 0.0768358, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_va5g2"]
gradient = SubResource("Gradient_qe33k")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jsgp8"]
size = Vector2(81, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfibq"]
size = Vector2(314, 505)

[node name="Node" type="Node"]

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 1600.0
offset_top = 80.0
offset_right = 2168.0
offset_bottom = 560.0
texture = SubResource("GradientTexture1D_va5g2")

[node name="stairs" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="stairs"]
texture_filter = 1
position = Vector2(448, 320)
scale = Vector2(5, 5)
texture = ExtResource("1_c0gwk")

[node name="Label" type="Label" parent="stairs"]
offset_left = 528.0
offset_top = 392.0
offset_right = 600.0
offset_bottom = 456.0
text = "это лестница"
autowrap_mode = 2

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAAAAAcAAgAEAAAAAAABAAcAAgAEAAAAAAACAAcAAgAEAAAAAAADAAcAAgAEAAAAAAAEAAcAAgAEAAAAAAAFAAcAAgAEAAAAAAAGAAcAAgAEAAAAAAAHAAcAAgAEAAAAAAAIAAcAAgAEAAAAAAAJAAcAAgAEAAAAAAAKAAcAAgAEAAAAAAALAAcAAgAEAAAAAAAMAAcAAgAEAAAAAAANAAcAAgAEAAAAAAAOAAcAAgAEAAAAAAD8/wcAAgAEAAAAAAD9/wcAAgAEAAAAAAD+/wcAAgAEAAAAAAD//wcAAgAEAAAAAAAPAAcAAgAEAAAAAAAQAAcAAgAEAAAAAAARAAcAAgAEAAAAAAASAAcAAgAEAAAAAAATAAcAAgAEAAAAAAD7/wcAAgAEAAAAAAATAAYAAwAAAAAAAAATAAUAAgAGAAIAAAATAAQAAgAAAAIAAAATAAMAAgAAAAIAAAATAAIAAgAAAAIAAAATAAEAAgAAAAIAAAATAAAAAgACAAAAAAAUAAAAAgACAAAAAAAVAAAAAgACAAAAAAAWAAAAAgACAAAAAAAXAAAAAgACAAAAAAAYAAAAAgACAAAAAAAUAAcAAgAEAAAAAAAVAAcAAgAEAAAAAAAWAAcAAgAEAAAAAAAXAAcAAgAEAAAAAAAYAAcAAgAAAAIAAAASAAAAAgACAAAAAAARAAAAAgACAAAAAAAQAAAAAgACAAAAAAAPAAAAAgACAAAAAAAOAAAAAgACAAAAAAANAAAAAgACAAAAAAAMAAAAAgACAAAAAAALAAAAAgACAAAAAAAIAAAAAgACAAAAAAAGAAAAAgACAAAAAAAHAAAAAgACAAAAAAAFAAAAAgACAAAAAAAEAAAAAgACAAAAAAADAAAAAgACAAAAAAACAAAAAgACAAAAAAABAAAAAgACAAAAAAAAAAAAAgACAAAAAAD//wAAAgACAAAAAAD+/wAAAgACAAAAAAD9/wAAAgACAAAAAAD8/wAAAgACAAAAAAD7/wAAAgACAAAAAAD6/wAAAgACAAAAAAAYAP//AgAAAAAAAAAXAP//AgAAAAAAAAAWAP//AgAAAAAAAAAVAP//AgAAAAAAAAAUAP//AgAAAAAAAAATAP//AgAAAAAAAAASAP//AgAAAAAAAAD7//v/AgAAAAAAAAD7//z/AgAAAAAAAAD7//3/AgAAAAAAAAD7//7/AgAAAAAAAAD7////AgAAAAAAAAD8//v/AgAAAAAAAAD8//z/AgAAAAAAAAD8//3/AgAAAAAAAAD8//7/AgAAAAAAAAD8////AgAAAAAAAAD9//v/AgAAAAAAAAD9//z/AgAAAAAAAAD9//3/AgAAAAAAAAD9//7/AgAAAAAAAAD9////AgAAAAAAAAD+//v/AgAAAAAAAAD+//z/AgAAAAAAAAD+//3/AgAAAAAAAAD+//7/AgAAAAAAAAD+////AgAAAAAAAAD///v/AgAAAAAAAAD///z/AgAAAAAAAAD///3/AgAAAAAAAAD///7/AgAAAAAAAAD/////AgAAAAAAAAAAAPv/AgAAAAAAAAAAAPz/AgAAAAAAAAAAAP3/AgAAAAAAAAAAAP7/AgAAAAAAAAAAAP//AgAAAAAAAAABAPv/AgAAAAAAAAABAPz/AgAAAAAAAAABAP3/AgAAAAAAAAABAP7/AgAAAAAAAAABAP//AgAAAAAAAAACAPv/AgAAAAAAAAACAPz/AgAAAAAAAAACAP3/AgAAAAAAAAACAP7/AgAAAAAAAAACAP//AgAAAAAAAAADAPv/AgAAAAAAAAADAPz/AgAAAAAAAAADAP3/AgAAAAAAAAADAP7/AgAAAAAAAAADAP//AgAAAAAAAAAEAPv/AgAAAAAAAAAEAPz/AgAAAAAAAAAEAP3/AgAAAAAAAAAEAP7/AgAAAAAAAAAEAP//AgAAAAAAAAAFAPv/AgAAAAAAAAAFAPz/AgAAAAAAAAAFAP3/AgAAAAAAAAAFAP7/AgAAAAAAAAAFAP//AgAAAAAAAAAGAPv/AgAAAAAAAAAGAPz/AgAAAAAAAAAGAP3/AgAAAAAAAAAGAP7/AgAAAAAAAAAGAP//AgAAAAAAAAAHAPv/AgAAAAAAAAAHAPz/AgAAAAAAAAAHAP3/AgAAAAAAAAAHAP7/AgAAAAAAAAAHAP//AgAAAAAAAAAIAPv/AgAAAAAAAAAIAPz/AgAAAAAAAAAIAP3/AgAAAAAAAAAIAP7/AgAAAAAAAAAIAP//AgAAAAAAAAAJAPv/AgAAAAAAAAAJAPz/AgAAAAAAAAAJAP3/AgAAAAAAAAAJAP7/AgAAAAAAAAAJAP//AgAAAAAAAAAKAPv/AgAAAAAAAAAKAPz/AgAAAAAAAAAKAP3/AgAAAAAAAAAKAP7/AgAAAAAAAAAKAP//AgAAAAAAAAALAPv/AgAAAAAAAAALAPz/AgAAAAAAAAALAP3/AgAAAAAAAAALAP7/AgAAAAAAAAALAP//AgAAAAAAAAAMAPv/AgAAAAAAAAAMAPz/AgAAAAAAAAAMAP3/AgAAAAAAAAAMAP7/AgAAAAAAAAAMAP//AgAAAAAAAAANAPv/AgAAAAAAAAANAPz/AgAAAAAAAAANAP3/AgAAAAAAAAANAP7/AgAAAAAAAAANAP//AgAAAAAAAAAOAPv/AgAAAAAAAAAOAPz/AgAAAAAAAAAOAP3/AgAAAAAAAAAOAP7/AgAAAAAAAAAOAP//AgAAAAAAAAAPAPv/AgAAAAAAAAAPAPz/AgAAAAAAAAAPAP3/AgAAAAAAAAAPAP7/AgAAAAAAAAAPAP//AgAAAAAAAAAQAPv/AgAAAAAAAAAQAPz/AgAAAAAAAAAQAP3/AgAAAAAAAAAQAP7/AgAAAAAAAAAQAP//AgAAAAAAAAARAPv/AgAAAAAAAAARAPz/AgAAAAAAAAARAP3/AgAAAAAAAAARAP7/AgAAAAAAAAARAP//AgAAAAAAAAASAPv/AgAAAAAAAAASAPz/AgAAAAAAAAASAP3/AgAAAAAAAAASAP7/AgAAAAAAAAATAPv/AgAAAAAAAAATAPz/AgAAAAAAAAATAP3/AgAAAAAAAAATAP7/AgAAAAAAAAAUAPv/AgAAAAAAAAAUAPz/AgAAAAAAAAAUAP3/AgAAAAAAAAAUAP7/AgAAAAAAAAAVAPv/AgAAAAAAAAAVAPz/AgAAAAAAAAAVAP3/AgAAAAAAAAAVAP7/AgAAAAAAAAAWAPv/AgAAAAAAAAAWAPz/AgAAAAAAAAAWAP3/AgAAAAAAAAAWAP7/AgAAAAAAAAAXAPv/AgAAAAAAAAAXAPz/AgAAAAAAAAAXAP3/AgAAAAAAAAAXAP7/AgAAAAAAAAAYAPv/AgAAAAAAAAAYAPz/AgAAAAAAAAAYAP3/AgAAAAAAAAAYAP7/AgAAAAAAAAD5//v/AgAAAAAAAAD5//z/AgAAAAAAAAD5//3/AgAAAAAAAAD5//7/AgAAAAAAAAD5////AgAAAAAAAAD6//v/AgAAAAAAAAD6//z/AgAAAAAAAAD6//3/AgAAAAAAAAD6//7/AgAAAAAAAAD6////AgAAAAAAAAD6/wgAAgAAAAAAAAD6/wkAAgAAAAAAAAD6/woAAgAAAAAAAAD6/wsAAgAAAAAAAAD6/wwAAgAAAAAAAAD7/wgAAgAAAAAAAAD7/wkAAgAAAAAAAAD7/woAAgAAAAAAAAD7/wsAAgAAAAAAAAD7/wwAAgAAAAAAAAD8/wgAAgAAAAAAAAD8/wkAAgAAAAAAAAD8/woAAgAAAAAAAAD8/wsAAgAAAAAAAAD8/wwAAgAAAAAAAAD9/wgAAgAAAAAAAAD9/wkAAgAAAAAAAAD9/woAAgAAAAAAAAD9/wsAAgAAAAAAAAD9/wwAAgAAAAAAAAD+/wgAAgAAAAAAAAD+/wkAAgAAAAAAAAD+/woAAgAAAAAAAAD+/wsAAgAAAAAAAAD+/wwAAgAAAAAAAAD//wgAAgAAAAAAAAD//wkAAgAAAAAAAAD//woAAgAAAAAAAAD//wsAAgAAAAAAAAD//wwAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAkAAgAAAAAAAAAAAAoAAgAAAAAAAAAAAAsAAgAAAAAAAAAAAAwAAgAAAAAAAAABAAgAAgAAAAAAAAABAAkAAgAAAAAAAAABAAoAAgAAAAAAAAABAAsAAgAAAAAAAAABAAwAAgAAAAAAAAACAAgAAgAAAAAAAAACAAkAAgAAAAAAAAACAAoAAgAAAAAAAAACAAsAAgAAAAAAAAACAAwAAgAAAAAAAAADAAgAAgAAAAAAAAADAAkAAgAAAAAAAAADAAoAAgAAAAAAAAADAAsAAgAAAAAAAAADAAwAAgAAAAAAAAAEAAgAAgAAAAAAAAAEAAkAAgAAAAAAAAAEAAoAAgAAAAAAAAAEAAsAAgAAAAAAAAAEAAwAAgAAAAAAAAAFAAgAAgAAAAAAAAAFAAkAAgAAAAAAAAAFAAoAAgAAAAAAAAAFAAsAAgAAAAAAAAAFAAwAAgAAAAAAAAAGAAgAAgAAAAAAAAAGAAkAAgAAAAAAAAAGAAoAAgAAAAAAAAAGAAsAAgAAAAAAAAAGAAwAAgAAAAAAAAAHAAgAAgAAAAAAAAAHAAkAAgAAAAAAAAAHAAoAAgAAAAAAAAAHAAsAAgAAAAAAAAAHAAwAAgAAAAAAAAAIAAgAAgAAAAAAAAAIAAkAAgAAAAAAAAAIAAoAAgAAAAAAAAAIAAsAAgAAAAAAAAAIAAwAAgAAAAAAAAAJAAgAAgAAAAAAAAAJAAkAAgAAAAAAAAAJAAoAAgAAAAAAAAAJAAsAAgAAAAAAAAAJAAwAAgAAAAAAAAAKAAgAAgAAAAAAAAAKAAkAAgAAAAAAAAAKAAoAAgAAAAAAAAAKAAsAAgAAAAAAAAAKAAwAAgAAAAAAAAALAAgAAgAAAAAAAAALAAkAAgAAAAAAAAALAAoAAgAAAAAAAAALAAsAAgAAAAAAAAALAAwAAgAAAAAAAAAMAAgAAgAAAAAAAAAMAAkAAgAAAAAAAAAMAAoAAgAAAAAAAAAMAAsAAgAAAAAAAAAMAAwAAgAAAAAAAAANAAgAAgAAAAAAAAANAAkAAgAAAAAAAAANAAoAAgAAAAAAAAANAAsAAgAAAAAAAAANAAwAAgAAAAAAAAAOAAgAAgAAAAAAAAAOAAkAAgAAAAAAAAAOAAoAAgAAAAAAAAAOAAsAAgAAAAAAAAAOAAwAAgAAAAAAAAAPAAgAAgAAAAAAAAAPAAkAAgAAAAAAAAAPAAoAAgAAAAAAAAAPAAsAAgAAAAAAAAAPAAwAAgAAAAAAAAAQAAgAAgAAAAAAAAAQAAkAAgAAAAAAAAAQAAoAAgAAAAAAAAAQAAsAAgAAAAAAAAAQAAwAAgAAAAAAAAARAAgAAgAAAAAAAAARAAkAAgAAAAAAAAARAAoAAgAAAAAAAAARAAsAAgAAAAAAAAARAAwAAgAAAAAAAAASAAgAAgAAAAAAAAASAAkAAgAAAAAAAAASAAoAAgAAAAAAAAASAAsAAgAAAAAAAAASAAwAAgAAAAAAAAATAAgAAgAAAAAAAAATAAkAAgAAAAAAAAATAAoAAgAAAAAAAAATAAsAAgAAAAAAAAATAAwAAgAAAAAAAAAUAAgAAgAAAAAAAAAUAAkAAgAAAAAAAAAUAAoAAgAAAAAAAAAUAAsAAgAAAAAAAAAUAAwAAgAAAAAAAAAVAAgAAgAAAAAAAAAVAAkAAgAAAAAAAAAVAAoAAgAAAAAAAAAVAAsAAgAAAAAAAAAVAAwAAgAAAAAAAAAWAAgAAgAAAAAAAAAWAAkAAgAAAAAAAAAWAAoAAgAAAAAAAAAWAAsAAgAAAAAAAAAWAAwAAgAAAAAAAAAXAAgAAgAAAAAAAAAXAAkAAgAAAAAAAAAXAAoAAgAAAAAAAAAXAAsAAgAAAAAAAAAXAAwAAgAAAAAAAAAYAAgAAgAAAAAAAAAYAAkAAgAAAAAAAAAYAAoAAgAAAAAAAAAYAAsAAgAAAAAAAAAYAAwAAgAAAAAAAAD6/wcAAgAAAAIAAAAJAAAAAgACAAAAAAAKAAAAAgACAAAAAAAZAAcAAgAAAAIAAAAaAAcAAgAAAAIAAAAZAAgAAgAAAAAAAAAaAAgAAgAAAAAAAAAZAAkAAgAAAAAAAAAaAAkAAgAAAAAAAAAaAAoAAgAAAAAAAAAaAAsAAgAAAAAAAAAaAAwAAgAAAAAAAAAZAAwAAgAAAAAAAAAZAAsAAgAAAAAAAAAZAAoAAgAAAAAAAAAZAAAAAgAAAAAAAAAZAP//AgAAAAAAAAAZAP7/AgAAAAAAAAAZAP3/AgAAAAAAAAAZAPz/AgAAAAAAAAAZAPv/AgAAAAAAAAAaAPv/AgAAAAAAAAAaAPz/AgAAAAAAAAAaAP3/AgAAAAAAAAAaAP7/AgAAAAAAAAAaAP//AgAAAAAAAAAaAAAAAgAAAAAAAAD5/wgAAgAAAAAAAAD5/wkAAgAAAAAAAAD5/woAAgAAAAAAAAD5/wsAAgAAAAAAAAD5/wwAAgAAAAAAAAD5/wcAAgAAAAIAAAD5/wQAAgAAAAIAAAD5/wMAAgAAAAIAAAD5/wIAAgAAAAIAAAD5/wEAAgAAAAIAAAD5/wAAAgAAAAAAAAD4/wcAAgAAAAIAAAD3/wcAAgAAAAIAAAD2/wcAAgAAAAIAAAD1/wcAAgAAAAIAAAD0/wcAAgAAAAIAAADz/wcAAgAAAAIAAADy/wcAAgAAAAIAAADx/wcAAgAAAAIAAAD4/wgAAgAAAAAAAAD3/wkAAgAAAAAAAAD2/wkAAgAAAAAAAAD1/wkAAgAAAAAAAAD0/wkAAgAAAAAAAADx/wgAAgAAAAAAAADx/wkAAgAAAAAAAADx/woAAgAAAAAAAADx/wsAAgAAAAAAAADx/wwAAgAAAAAAAADy/wgAAgAAAAAAAADy/wkAAgAAAAAAAADy/woAAgAAAAAAAADy/wsAAgAAAAAAAADy/wwAAgAAAAAAAADz/wgAAgAAAAAAAADz/wkAAgAAAAAAAADz/woAAgAAAAAAAADz/wsAAgAAAAAAAADz/wwAAgAAAAAAAAD0/wgAAgAAAAAAAAD0/woAAgAAAAAAAAD0/wsAAgAAAAAAAAD0/wwAAgAAAAAAAAD1/wgAAgAAAAAAAAD1/woAAgAAAAAAAAD1/wsAAgAAAAAAAAD1/wwAAgAAAAAAAAD2/wgAAgAAAAAAAAD2/woAAgAAAAAAAAD2/wsAAgAAAAAAAAD2/wwAAgAAAAAAAAD3/wgAAgAAAAAAAAD3/woAAgAAAAAAAAD3/wsAAgAAAAAAAAD3/wwAAgAAAAAAAAD4/wkAAgAAAAAAAAD4/woAAgAAAAAAAAD4/wsAAgAAAAAAAAD4/wwAAgAAAAAAAAD2//7/AgAAAAAAAAD2////AgAAAAAAAAD3//7/AgAAAAAAAAD3////AgAAAAAAAADx//v/AgAAAAAAAADx//z/AgAAAAAAAADx//3/AgAAAAAAAADx//7/AgAAAAAAAADx////AgAAAAAAAADy//v/AgAAAAAAAADy//z/AgAAAAAAAADy//3/AgAAAAAAAADy//7/AgAAAAAAAADy////AgAAAAAAAADz//v/AgAAAAAAAADz//z/AgAAAAAAAADz//3/AgAAAAAAAADz//7/AgAAAAAAAADz////AgAAAAAAAAD0//v/AgAAAAAAAAD0//z/AgAAAAAAAAD0//3/AgAAAAAAAAD0//7/AgAAAAAAAAD0////AgAAAAAAAAD1//v/AgAAAAAAAAD1//z/AgAAAAAAAAD1//3/AgAAAAAAAAD1//7/AgAAAAAAAAD1////AgAAAAAAAAD2//v/AgAAAAAAAAD2//z/AgAAAAAAAAD2//3/AgAAAAAAAAD3//v/AgAAAAAAAAD3//z/AgAAAAAAAAD3//3/AgAAAAAAAAD4//v/AgAAAAAAAAD4//z/AgAAAAAAAAD4//3/AgAAAAAAAAD4//7/AgAAAAAAAAD4////AgAAAAAAAADx/wAAAgACAAAAAADy/wAAAgACAAAAAADz/wAAAgACAAAAAAD0/wAAAgACAAAAAAD1/wAAAgACAAAAAAD2/wAAAgACAAAAAAD3/wAAAgACAAAAAAD4/wAAAgACAAAAAADl//7/AgAAAAAAAADl////AgAAAAAAAADl/wAAAgAAAAAAAADl/wEAAgAAAAAAAADl/wIAAgAAAAAAAADl/wMAAgAAAAAAAADl/wQAAgAAAAAAAADl/wUAAgAAAAAAAADl/wYAAgAAAAAAAADl/wcAAgAAAAAAAADl/wgAAgAAAAAAAADl/wkAAgAAAAAAAADl/woAAgAAAAAAAADl/wsAAgAAAAAAAADl/wwAAgAAAAAAAADm//7/AgAAAAAAAADm////AgAAAAAAAADm/wAAAgAAAAAAAADm/wEAAgAAAAAAAADm/wIAAgAAAAAAAADm/wMAAgAAAAAAAADm/wQAAgAAAAAAAADm/wUAAgAAAAAAAADm/wYAAgAAAAAAAADm/wcAAgAAAAAAAADm/wgAAgAAAAAAAADm/wkAAgAAAAAAAADm/woAAgAAAAAAAADm/wsAAgAAAAAAAADm/wwAAgAAAAAAAADn//7/AgAAAAAAAADn////AgAAAAAAAADn/wAAAgAAAAAAAADn/wEAAgAAAAAAAADn/wIAAgAAAAAAAADn/wMAAgAAAAAAAADn/wQAAgAAAAAAAADn/wUAAgAAAAAAAADn/wYAAgAAAAAAAADn/wcAAgAAAAAAAADn/wgAAgAAAAAAAADn/wkAAgAAAAAAAADn/woAAgAAAAAAAADn/wsAAgAAAAAAAADn/wwAAgAAAAAAAADo//7/AgAAAAAAAADo////AgAAAAAAAADo/wAAAgAAAAAAAADo/wEAAgAAAAAAAADo/wIAAgAAAAAAAADo/wMAAgAAAAAAAADo/wQAAgAAAAAAAADo/wUAAgAAAAAAAADo/wYAAgAAAAAAAADo/wcAAgAAAAAAAADo/wgAAgAAAAAAAADo/wkAAgAAAAAAAADo/woAAgAAAAAAAADo/wsAAgAAAAAAAADo/wwAAgAAAAAAAADp//7/AgAAAAAAAADp////AgAAAAAAAADp/wAAAgAAAAAAAADp/wEAAgAAAAAAAADp/wIAAgAAAAAAAADp/wMAAgAAAAAAAADp/wQAAgAAAAAAAADp/wUAAgAAAAAAAADp/wYAAgAAAAAAAADp/wcAAgAAAAAAAADp/wgAAgAAAAAAAADp/wkAAgAAAAAAAADp/woAAgAAAAAAAADp/wsAAgAAAAAAAADp/wwAAgAAAAAAAADq//7/AgAAAAAAAADq////AgAAAAAAAADq/wAAAgAAAAAAAADq/wEAAgAAAAAAAADq/wIAAgAAAAAAAADq/wMAAgAAAAAAAADq/wQAAgAAAAAAAADq/wUAAgAAAAAAAADq/wYAAgAAAAAAAADq/wcAAgAAAAAAAADq/wgAAgAAAAAAAADq/wkAAgAAAAAAAADq/woAAgAAAAAAAADq/wsAAgAAAAAAAADq/wwAAgAAAAAAAADr//7/AgAAAAAAAADr////AgAAAAAAAADr/wAAAgAAAAAAAADr/wEAAgAAAAAAAADr/wIAAgAAAAAAAADr/wMAAgAAAAAAAADr/wQAAgAAAAAAAADr/wUAAgAAAAAAAADr/wYAAgAAAAAAAADr/wcAAgAAAAAAAADr/wgAAgAAAAAAAADr/wkAAgAAAAAAAADr/woAAgAAAAAAAADr/wsAAgAAAAAAAADr/wwAAgAAAAAAAADs//7/AgAAAAAAAADs////AgAAAAAAAADs/wAAAgAAAAAAAADs/wEAAgAAAAAAAADs/wIAAgAAAAAAAADs/wMAAgAAAAAAAADs/wQAAgAAAAAAAADs/wUAAgAAAAAAAADs/wYAAgAAAAAAAADs/wcAAgAAAAAAAADs/wgAAgAAAAAAAADs/wkAAgAAAAAAAADs/woAAgAAAAAAAADs/wsAAgAAAAAAAADs/wwAAgAAAAAAAADt//7/AgAAAAAAAADt////AgAAAAAAAADt/wAAAgAAAAAAAADt/wEAAgAAAAAAAADt/wIAAgAAAAAAAADt/wMAAgAAAAAAAADt/wQAAgAAAAAAAADt/wUAAgAAAAAAAADt/wYAAgAAAAAAAADt/wcAAgAAAAAAAADt/wgAAgAAAAAAAADt/wkAAgAAAAAAAADt/woAAgAAAAAAAADt/wsAAgAAAAAAAADt/wwAAgAAAAAAAADu//7/AgAAAAAAAADu////AgAAAAAAAADu/wAAAgAAAAAAAADu/wEAAgAAAAAAAADu/wIAAgAAAAAAAADu/wMAAgAAAAAAAADu/wQAAgAAAAAAAADu/wUAAgAAAAAAAADu/wYAAgAAAAAAAADu/wcAAgAAAAAAAADu/wgAAgAAAAAAAADu/wkAAgAAAAAAAADu/woAAgAAAAAAAADu/wsAAgAAAAAAAADu/wwAAgAAAAAAAADv//7/AgAAAAAAAADv////AgAAAAAAAADv/wAAAgAAAAAAAADv/wEAAgAAAAAAAADv/wIAAgAAAAAAAADv/wMAAgAAAAAAAADv/wQAAgAAAAAAAADv/wUAAgAAAAAAAADv/wYAAgAAAAAAAADv/wcAAgAAAAAAAADv/wgAAgAAAAAAAADv/wkAAgAAAAAAAADv/woAAgAAAAAAAADv/wsAAgAAAAAAAADv/wwAAgAAAAAAAADw//7/AgAAAAAAAADw////AgAAAAAAAADw/wAAAgAAAAAAAADw/wEAAgAAAAAAAADw/wIAAgAAAAAAAADw/wMAAgAAAAAAAADw/wQAAgAAAAAAAADw/wUAAgAAAAAAAADw/wYAAgAAAAAAAADw/wcAAgAAAAAAAADw/wgAAgAAAAAAAADw/wkAAgAAAAAAAADw/woAAgAAAAAAAADw/wsAAgAAAAAAAADw/wwAAgAAAAAAAADl//v/AgAAAAAAAADl//z/AgAAAAAAAADl//3/AgAAAAAAAADm//v/AgAAAAAAAADm//z/AgAAAAAAAADm//3/AgAAAAAAAADn//v/AgAAAAAAAADn//z/AgAAAAAAAADn//3/AgAAAAAAAADo//v/AgAAAAAAAADo//z/AgAAAAAAAADo//3/AgAAAAAAAADp//v/AgAAAAAAAADp//z/AgAAAAAAAADp//3/AgAAAAAAAADq//v/AgAAAAAAAADq//z/AgAAAAAAAADq//3/AgAAAAAAAADr//v/AgAAAAAAAADr//z/AgAAAAAAAADr//3/AgAAAAAAAADs//v/AgAAAAAAAADs//z/AgAAAAAAAADs//3/AgAAAAAAAADt//v/AgAAAAAAAADt//z/AgAAAAAAAADt//3/AgAAAAAAAADu//v/AgAAAAAAAADu//z/AgAAAAAAAADu//3/AgAAAAAAAADv//v/AgAAAAAAAADv//z/AgAAAAAAAADv//3/AgAAAAAAAADw//v/AgAAAAAAAADw//z/AgAAAAAAAADw//3/AgAAAAAAAAD4/wQAAgAAAAIAAAA=")
tile_set = ExtResource("2_iklmn")

[node name="main_character" parent="." instance=ExtResource("3_u3w58")]
position = Vector2(1407, 514)
script = ExtResource("4_qldnf")
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="main_character"]
position = Vector2(2, -50)
position_smoothing_enabled = true

[node name="Target_label" parent="." instance=ExtResource("5_v483c")]

[node name="Door_out2" type="Area2D" parent="."]
position = Vector2(1528, 410)
script = ExtResource("6_w4bxk")
metadata/_edit_group_ = true

[node name="door_collision" type="CollisionShape2D" parent="Door_out2"]
position = Vector2(30.5, 70)
shape = SubResource("RectangleShape2D_jsgp8")

[node name="torch" parent="." instance=ExtResource("7_ryqje")]
position = Vector2(1509, 303)
rotation = -0.191986
scale = Vector2(0.3, 0.3)

[node name="door_animated" parent="." instance=ExtResource("8_8k0dg")]
position = Vector2(-518, 482)
scale = Vector2(5, 5)
script = ExtResource("9_gtqmv")

[node name="chixir" parent="." instance=ExtResource("10_tqjns")]
position = Vector2(-1096, 447)
scale = Vector2(0.5, 0.5)
script = ExtResource("11_5pykn")

[node name="dialogue" parent="." instance=ExtResource("12_2o755")]
visible = false
position = Vector2(-1004, 280)

[node name="key" parent="." instance=ExtResource("13_ysvy0")]
visible = false
position = Vector2(-602, 278)
script = ExtResource("14_l5u2x")

[node name="success_label" type="Label" parent="."]
visible = false
offset_left = -928.0
offset_top = 236.0
offset_right = -689.0
offset_bottom = 259.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Вы успешно подобрали ключ"

[node name="stairs_collision" type="Area2D" parent="."]
position = Vector2(440, 335)
script = ExtResource("15_aboo6")

[node name="stairs_shape_col" type="CollisionShape2D" parent="stairs_collision"]
position = Vector2(8, -19.5)
shape = SubResource("RectangleShape2D_bfibq")

[node name="usage_label" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="usage_label"]
offset_left = 324.0
offset_top = 239.0
offset_right = 751.0
offset_bottom = 280.0
metadata/_edit_group_ = true

[node name="usage_text" type="Label" parent="usage_label"]
offset_left = 331.0
offset_top = 246.0
offset_right = 745.0
offset_bottom = 269.0
text = "Нажмите Enter, чтобы воспользоваться лестницей"
metadata/_edit_group_ = true

[connection signal="body_entered" from="Door_out2" to="Door_out2" method="_on_body_entered"]
[connection signal="body_entered" from="door_animated" to="door_animated" method="_on_body_entered"]
[connection signal="body_exited" from="door_animated" to="door_animated" method="_on_body_exited"]
[connection signal="body_entered" from="chixir" to="chixir" method="_on_body_entered"]
[connection signal="body_entered" from="key" to="key" method="_on_body_entered"]
[connection signal="body_entered" from="stairs_collision" to="stairs_collision" method="_on_body_entered"]
[connection signal="body_exited" from="stairs_collision" to="stairs_collision" method="_on_body_exited"]
